[package]
name = "lru_rs_mem"
version = "0.1.0"
description = "A Free System RAM capped LRU cache implementation"
readme = "README.md"

[features]
default = ["hashbrown"]
nightly = ["hashbrown", "hashbrown/nightly"]

[dependencies]
hashbrown = { version = "0.6.*", optional = true }

[dev-dependencies]
scoped_threadpool = "0.1.*"
sysinfo = "0.10.3"
